# tensor-intelligence

./: .env.example  .gitignore  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
.opencode/skills/frontend/: SKILL.md
.opencode/skills/project-ctx/: SKILL.md
.opencode/skills/testing/: SKILL.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  FlowChart.tsx  Layout.tsx  SignalFlowVisualization.tsx  SignalHistory.tsx  SignalSummaryCards.tsx  SubnetDetail.tsx  SubnetsTable.tsx  TopOpportunities.tsx
frontend/src/components/__tests__/: SignalSummaryCards.test.tsx  SubnetsTable.test.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: format.ts
frontend/src/lib/__tests__/: format.test.ts
frontend/src/types/: index.ts
scripts/: generate_badge.py
src/: config.py
src/api/: main.py
src/api/routes/: reports.py  signal_flow.py  signals.py  subnets.py
src/db/: session.py
src/engine/: scheduler.py
src/engine/alerts/: notifier.py
src/engine/analysis/: __init__.py  flow_detector.py  fundamental_scorer.py  risk_scorer.py  signal_generator.py
src/engine/data/: __init__.py  collector.py  taostats_client.py
src/engine/reports/: generator.py
src/models/: __init__.py  flow_snapshot.py  report.py  signal.py  subnet.py
tests/: conftest.py  test_analysis.py  test_api.py  test_models.py
